NXT-621: Fixed width for inputField input on webOS (#193)
### Checklist

* [x] I have read and understand the [contribution
guide](https://enactjs.com/docs/developer-guide/contributing/)
* [x] A [CHANGELOG
entry](https://enactjs.com/docs/developer-guide/contributing/changelogs/)
is included
* [x] At least one test case is included for this feature or bug fix
* [x] Documentation was added or is not needed
* [ ] This is an API breaking change

### Issue Resolved / Feature Added
[//]: # (Describe the issue resolved or feature added by this pull
request)
In some webOS builds, the HTML input did not fit to its parent's fixed
width and was clipping iconBefore and iconAfter

### Resolution
[//]: # (Does the code work as intended?)
[//]: # (What is the impact of this change and *why* was it made?)
Fixed width for inputField input on webOS, based on the presence of
icons.
Calculation is (inputField width - inputField padding -
iconBefore?.width - iconAfter?.width)

### Additional Considerations
[//]: # (How should the change be tested?)
[//]: # (Are there any outstanding questions?)
[//]: # (Were any side-effects caused by the change?)


### Links
[//]: # (Related issues, references)
NXT-621

### Comments

Enact-DCO-1.0-Signed-off-by: Daniel Stoian daniel.stoian@lgepartner.com

---------

--- a/Input/InputField.module.less
+++ b/Input/InputField.module.less
@@ -55,7 +55,6 @@
 	vertical-align: middle;
 	align-items: center;
 	height: @lime-inputfield-height;
-	width: @lime-inputfield-width;
 
 	.iconBefore {
 		.margin-start-end(0, @lime-inputfield-icon-margin);
@@ -106,6 +105,19 @@
 
 	&.large {
 		padding: @lime-inputfield-padding-large;
+		width: @lime-inputfield-width;
+
+		&.hasIconBefore, &.hasIconAfter {
+			.input {
+				max-width: @lime-inputfield-withoneicon-width;
+			}
+		}
+
+		&.hasIconBefore&.hasIconAfter {
+			.input {
+				max-width: @lime-inputfield-withtwoicons-width;
+			}
+		}
 	}
 
 	&.small {
@@ -121,6 +133,18 @@
 		.inputHighlight {
 			line-height: @lime-inputfield-small-height;
 			height: @lime-inputfield-small-height;
+		}
+
+		&.hasIconBefore, &.hasIconAfter {
+			.input {
+				max-width: @lime-inputfield-small-withoneicon-width;
+			}
+		}
+
+		&.hasIconBefore&.hasIconAfter {
+			.input {
+				max-width: @lime-inputfield-small-withtwoicons-width;
+			}
 		}
 	}
 
